--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+dist/Release
 
 # Dependency directories
 node_modules/
@@ -75,12 +75,11 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
-# Next.js build output
+# Next.js dist output
 .next
 
-# Nuxt.js build / generate output
+# Nuxt.js dist / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -88,7 +87,7 @@ dist
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
-# vuepress build output
+# vuepress dist output
 .vuepress/dist
 
 # Serverless directories
@@ -102,3 +101,7 @@ dist
 
 # TernJS port file
 .tern-port
+/.idea/
+/package-lock.json
+/yarn.lock
+/dist/js/
